add starter, updt soln

--- a/solution/index.html
+++ b/solution/index.html
@@ -21,9 +21,7 @@
 					<th>Item</th>
 				</tr>
 			</thead>
-			<tbody id="ingredients-body">
-				
-			</tbody>
+			<tbody id="ingredients-body"></tbody>
 		</table>
 		<br>
 		<label for="serving-selector">Number of Servings</label>
