--- a/solution/index.html
+++ b/solution/index.html
@@ -9,6 +9,14 @@
 		<title>Badger Recipes</title>
 	</head>
 	<body>
+		<label for="serving-selector">Choose a Recipe</label>
+		<select onchange="updateRecipe()" id="recipe-selector">
+			<option>chili</option>
+			<option>pasta</option>
+			<option>pizza</option>
+		</select>
+		<br>
+		<br>
 		<img id="recipe-img" width="400" height="400"/>
         <h1 id="recipe-name"></h1>
 		<sub id="recipe-author"></sub>
